@@ -261,7 +261,7 @@ AC_HEADER_TIME
 AC_CHECK_HEADERS([algorithm assert.h cassert cstdarg cstdio cstdlib cstring\
  ctime errno.h fcntl.h fstream functional inttypes.h iomanip iostream\
  limits.h list map sstream stdint.h stdio.h string string.h sys/select.h\
- time.h unistd.h vector], , 
+ time.h unistd.h utility vector], , 
 	AC_MSG_ERROR([some headers are missing]))
 
 # Checks for typedefs, structures, and compiler characteristics
