@@ -7,7 +7,8 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
-* [2018-08-23] RFC4880: added StandaloneHash[V3]() and Verify()
+* [2018-08-24] RFC4880: added types and parameters for Notation Data
+* [2018-08-23] RFC4880: added StandaloneHash[V3]() and PacketBodyExtract()
 * [2018-08-23] RFC4880: added PacketSigPrepareTimestampSignature()
 * [2018-08-22] RFC4880: reorder preferred hash algorithms by hash length
 * [2018-08-22] RFC4880: added support for creating Issuer Fingerprint subpacket
